# Code-Smells-Detection-in-JavaScript

./: Android-dependency-update-report.txt  JS-dependency-update-report.txt  WARP.md  update-android-dependencies.ps1  update-js-dependencies.ps1
JS-CS-Detection-byExample/Dataset (ALERT 5 GB)/362855/quickfix-1.0.4 (3)/quickfix/: AUTHORS  Doxyfile  Makefile.in  NEWS  at_server.dsp  bootstrap  build.bat  build.xml  configure  configure.in  mkinstalldirs  pt.dsp  quickfix_lib.dsp  ut.dsp
JS-CS-Detection-byExample/Dataset (ALERT 5 GB)/362855/quickfix-1.0.4 (3)/quickfix/CPPTest/: Makefile.in  Test.h  TestXMLFileOutputDisplay.h
JS-CS-Detection-byExample/Dataset (ALERT 5 GB)/362855/quickfix-1.0.4 (3)/quickfix/cfg/: Makefile.in  arca_certification.cfg  ordermatch.cfg  tradeclient.cfg
JS-CS-Detection-byExample/Dataset (ALERT 5 GB)/362855/quickfix-1.0.4 (3)/quickfix/doc/: Makefile.in
JS-CS-Detection-byExample/Dataset (ALERT 5 GB)/362855/quickfix-1.0.4 (3)/quickfix/examples/: .cvsignore  Makefile.in  configure  configure.in  examples.dsw
JS-CS-Detection-byExample/Dataset (ALERT 5 GB)/362855/quickfix-1.0.4 (3)/quickfix/spec/: FIX40.xml  FIX41.xml  FIX42.xml  FieldNumbers.xsl  FixLexer.l  Makefile.in  Messages.xsl  Values.xsl  fix-41-with_errata_19990630.html  fix-42-with_errata_20010501.html  generate.bat  generate_java_fields.xsl  generate_java_messages.xsl  lex.yy.c
JS-CS-Detection-byExample/Dataset (ALERT 5 GB)/362855/quickfix-1.0.4 (3)/quickfix/src/: .cvsignore  Makefile.in  TestSuite.h  at_application.h  at_client.cpp  at_server.cpp  getopt-repl.h  pt.cpp  stdafx.h  ut.cpp
JS-CS-Detection-byExample/Dataset (ALERT 5 GB)/362855/quickfix-1.0.4 (3)/quickfix/templates/: Makefile.in
JS-CS-Detection-byExample/Dataset (ALERT 5 GB)/362855/quickfix-1.0.4 (3)/quickfix/test/: Comparator.rb  FixParser.rb  Makefile.in  ReflectorClient.rb  ReflectorServer.rb  Runner.rb  SocketServer.rb  runat  runat.bat  runut  test.rb
JS-CS-Detection-byExample/Dataset (ALERT 5 GB)/362855/quickfix-1.1.0/quickfix/src/: Makefile.am  Makefile.in  TestSuite.h  at_application.h  at_client.cpp  at_server.cpp
JS-CS-Detection-byExample/Dataset (ALERT 5 GB)/362855_25821057/quickfix-1.0.4 (3)/quickfix/src/: Makefile.am  Makefile.in  TestSuite.h  at_application.h  at_client.cpp  at_server.cpp  pt.cpp
JS-CS-Detection-byExample/Dataset (ALERT 5 GB)/374130/spot-0.0l/spot-0.0l/: AUTHORS  ChangeLog  HACKING  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  configure  configure.ac
JS-CS-Detection-byExample/Dataset (ALERT 5 GB)/374130/spot-0.0l/spot-0.0l/buddy/: ChangeLog  Makefile.in  README  aclocal.m4  configure  configure.ac
JS-CS-Detection-byExample/Dataset (ALERT 5 GB)/374130/spot-0.0l/spot-0.0l/doc/: Doxyfile.in  Makefile.am  Makefile.in  mainpage.dox
JS-CS-Detection-byExample/Dataset (ALERT 5 GB)/374130/spot-0.0l/spot-0.0l/iface/: Makefile.am  Makefile.in
JS-CS-Detection-byExample/Dataset (ALERT 5 GB)/374130/spot-0.0l/spot-0.0l/lbtt/: AUTHORS  ChangeLog  Makefile.in  NEWS  README  aclocal.m4  config.h.in  configure  configure.ac
JS-CS-Detection-byExample/Dataset (ALERT 5 GB)/374130/spot-0.0l/spot-0.0l/m4/: buddy.m4  debug.m4  devel.m4  gccoptim.m4  gccwarn.m4  gspnlib.m4  ndebug.m4
JS-CS-Detection-byExample/Dataset (ALERT 5 GB)/374130/spot-0.0l/spot-0.0l/src/: Makefile.am  Makefile.in
JS-CS-Detection-byExample/Dataset (ALERT 5 GB)/374130/spot-0.0l/spot-0.0l/wrap/: Makefile.in
JS-CS-Detection-byExample/Dataset (ALERT 5 GB)/374130/spot-0.4/spot-0.4/: AUTHORS  ChangeLog  HACKING  Makefile.am  Makefile.in  NEWS  README  THANKS  aclocal.m4  configure  configure.ac
JS-CS-Detection-byExample/Dataset (ALERT 5 GB)/374130/spot-0.4/spot-0.4/bench/: Makefile.am  Makefile.in
JS-CS-Detection-byExample/Dataset (ALERT 5 GB)/374130/spot-0.4/spot-0.4/buddy/: CHANGES  ChangeLog  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
JS-CS-Detection-byExample/Dataset (ALERT 5 GB)/374130/spot-0.4/spot-0.4/doc/: Doxyfile.in  Makefile.am  Makefile.in  mainpage.dox  spot.tag
JS-CS-Detection-byExample/Dataset (ALERT 5 GB)/374130/spot-0.4/spot-0.4/iface/: Makefile.in
JS-CS-Detection-byExample/Dataset (ALERT 5 GB)/374130/spot-0.4/spot-0.4/lbtt/: AUTHORS  ChangeLog  Makefile.in  NEWS  README  config.h.in  configure  configure.ac
JS-CS-Detection-byExample/Dataset (ALERT 5 GB)/374130/spot-0.4/spot-0.4/m4/: gccoptim.m4
JS-CS-Detection-byExample/Dataset (ALERT 5 GB)/374130/spot-0.4/spot-0.4/src/: Makefile.am  Makefile.in
JS-CS-Detection-byExample/Dataset (ALERT 5 GB)/374130/spot-0.4/spot-0.4/wrap/: Makefile.in
JS-CS-Detection-byExample/Dataset (ALERT 5 GB)/374130/spot-0.8/spot-0.8/: AUTHORS  ChangeLog  HACKING  Makefile.am  Makefile.in  NEWS  README  THANKS  aclocal.m4  config.h.in  configure  configure.ac
JS-CS-Detection-byExample/Dataset (ALERT 5 GB)/374130/spot-0.8/spot-0.8/bench/: Makefile.am  Makefile.in
JS-CS-Detection-byExample/Dataset (ALERT 5 GB)/374130/spot-0.8/spot-0.8/buddy/: ChangeLog  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
JS-CS-Detection-byExample/Dataset (ALERT 5 GB)/374130/spot-0.8/spot-0.8/doc/: Makefile.am  Makefile.in  dot.in  spot.tag
JS-CS-Detection-byExample/Dataset (ALERT 5 GB)/374130/spot-0.8/spot-0.8/iface/: Makefile.am  Makefile.in
JS-CS-Detection-byExample/Dataset (ALERT 5 GB)/374130/spot-0.8/spot-0.8/lbtt/: ChangeLog  Makefile.in  NEWS  README  aclocal.m4  config.h.in  configure  configure.ac
JS-CS-Detection-byExample/Dataset (ALERT 5 GB)/374130/spot-0.8/spot-0.8/m4/: ax_prefix_config_h.m4  buddy.m4  gccoptim.m4  gccwarn.m4  lbtt.m4  valgrind.m4
JS-CS-Detection-byExample/Dataset (ALERT 5 GB)/374130/spot-1.0/spot-1.0/: AUTHORS  ChangeLog  HACKING  Makefile.am  Makefile.in  NEWS  README  THANKS  TODO  aclocal.m4  config.h.in  configure  configure.ac
JS-CS-Detection-byExample/Dataset (ALERT 5 GB)/374130/spot-1.2.5/spot-1.2.5/: .dir-locals.el  AUTHORS  ChangeLog  HACKING  Makefile.am  Makefile.in  NEWS  README  THANKS  aclocal.m4  config.h.in  configure  configure.ac
(+70922 files in other folders)
