	dnl I got a big bag of -*- Sh -*- for you right here
# Process this file with autoconf to produce a configure script.
AC_INIT(ordermatch/Application.h)
AM_INIT_AUTOMAKE(ordermatch, 1.0.0)
AM_CONFIG_HEADER(config.h)
# AM_DISABLE_SHARED

# gcc flags
CXXFLAGS="-Wall -fexceptions -finline-functions -D_XOPEN_SOURCE=500"
AC_SUBST(CXXFLAGS)
CFLAGS="-D_XOPEN_SOURCE=500"
AC_SUBST(CFLAGS)

# Checks for programs.
AC_PROG_CXX()
AC_PROG_CC()
# AC_PROG_RANLIB
AC_DISABLE_SHARED
AC_LIBTOOL_WIN32_DLL
AM_PROG_LIBTOOL
AM_PROG_LEX

AC_LANG_SAVE
AC_LANG_CPLUSPLUS

AC_OUTPUT( 
	Makefile
	ordermatch/Makefile 
	tradeclient/Makefile )
